syntax = "proto3";

package nerd;

// Go package option for code generation
option go_package = "github.com/nerd-daemon/messages";

// Message wrapper for wire protocol - all messages are wrapped in this
message Message {
  uint32 length = 1;     // Message length (excluding this field)
  uint32 message_id = 2; // Message type identifier
  bytes payload = 3;     // Serialized message payload
}

// Message type constants (will be used in Go code)
// Standard BitTorrent message IDs:
// 0 = choke, 1 = unchoke, 2 = interested, 3 = not_interested
// 4 = have, 5 = bitfield, 6 = request, 7 = piece, 8 = cancel
// 9 = port (DHT)
// 100+ = NERD-specific messages

// HandshakeMsg is the initial message exchanged between peers.
// It includes the protocol string, reserved bytes, info hash, and peer ID.
message HandshakeMsg {
  bytes protocol_string = 1; // Should be "BitTorrent protocol" (19 bytes)
  bytes reserved = 2;        // 8 reserved bytes (for extensions)
  bytes info_hash = 3;       // 20-byte SHA1 hash of the torrent's info dictionary
  bytes peer_id = 4;         // 20-byte peer ID
}

// KeepAliveMsg - sent to maintain connection (no payload)
message KeepAliveMsg {
  // Empty message - just a heartbeat
}

// ChokeMsg indicates that the sender is choking the receiver
message ChokeMsg {
  // No payload needed
}

// UnchokeMsg indicates that the sender is unchoking the receiver
message UnchokeMsg {
  // No payload needed
}

// InterestedMsg indicates that a peer is interested in downloading pieces.
message InterestedMsg {
  // No payload needed for this message type.
}

// NotInterestedMsg indicates that a peer is not interested in downloading
message NotInterestedMsg {
  // No payload needed
}

// HaveMsg indicates that a peer has a complete piece.
message HaveMsg {
  uint32 piece_index = 1; // The zero-based index of the piece the peer has
}

// BitfieldMsg represents which pieces a peer has (bitfield)
message BitfieldMsg {
  bytes bitfield = 1; // Bitfield representing owned pieces
}

// RequestMsg requests a specific block from a piece
message RequestMsg {
  uint32 piece_index = 1;  // Index of the piece
  uint32 block_offset = 2; // Byte offset within the piece
  uint32 block_length = 3; // Number of bytes requested
}

// PieceMsg delivers a block of data from a piece
message PieceMsg {
  uint32 piece_index = 1;  // Index of the piece
  uint32 block_offset = 2; // Byte offset within the piece
  bytes block_data = 3;    // The actual data block
}

// CancelMsg cancels a previous request
message CancelMsg {
  uint32 piece_index = 1;  // Index of the piece
  uint32 block_offset = 2; // Byte offset within the piece
  uint32 block_length = 3; // Number of bytes to cancel
}

// PortMsg announces the port for DHT node communication
message PortMsg {
  uint32 port = 1; // DHT listening port
}

// NERD-specific message types (message IDs 100+)

// PaymentRequestMsg requests payment for content delivery
message PaymentRequestMsg {
  bytes bsv_address = 1;    // BSV address for payment
  uint64 amount_satoshis = 2; // Amount in satoshis
  bytes content_hash = 3;   // Hash of content being paid for
  uint32 piece_index = 4;   // Specific piece being paid for
}

// PaymentProofMsg provides proof of BSV payment
message PaymentProofMsg {
  bytes transaction_id = 1; // BSV transaction ID
  uint32 piece_index = 2;   // Piece this payment covers
  bytes content_hash = 3;   // Content hash
}

// TokenBalanceMsg shares $NERD token balance information
message TokenBalanceMsg {
  uint64 nerd_balance = 1;     // $NERD token balance
  bytes token_address = 2;     // Token wallet address
  uint64 staked_amount = 3;    // Currently staked $NERD
  uint32 quality_score = 4;    // Peer quality/reputation score
}

// QualityMetricsMsg shares peer performance data
message QualityMetricsMsg {
  uint64 uptime_seconds = 1;      // How long peer has been online
  uint64 bytes_uploaded = 2;      // Total bytes uploaded
  uint64 bytes_downloaded = 3;    // Total bytes downloaded
  float upload_speed_mbps = 4;    // Average upload speed
  float reliability_score = 5;    // Reliability metric (0-1)
  repeated uint32 served_pieces = 6; // List of pieces this peer serves
}

// GeographicHintMsg provides routing optimization data
message GeographicHintMsg {
  string country_code = 1;  // ISO country code
  string city = 2;          // City name
  float latitude = 3;       // GPS latitude
  float longitude = 4;      // GPS longitude
  uint32 as_number = 5;     // Autonomous System number
}

// BSV Social Protocol Messages (200+)

// SocialFollowMsg handles follow/unfollow actions
message SocialFollowMsg {
  bytes creator_address = 1;     // BSV address of creator being followed
  bytes follower_address = 2;    // BSV address of follower
  bool is_follow = 3;            // true = follow, false = unfollow
  bytes bsv_signature = 4;       // BSV signature proving authenticity
  uint64 timestamp = 5;          // Unix timestamp
  bytes transaction_id = 6;      // BSV transaction ID (optional, for on-chain follows)
}

// SocialCommentMsg handles comments on content
message SocialCommentMsg {
  bytes content_address = 1;     // Bitcoin address of content being commented on
  bytes commenter_address = 2;   // BSV address of commenter
  string comment_text = 3;       // The actual comment
  bytes bsv_signature = 4;       // BSV signature proving authenticity
  uint64 timestamp = 5;          // Unix timestamp
  bytes parent_comment_id = 6;   // For threaded replies (optional)
  uint32 nerd_tip = 7;          // $NERD tokens tipped with comment
}

// SocialReactionMsg handles likes, hearts, etc.
message SocialReactionMsg {
  bytes content_address = 1;     // Bitcoin address of content
  bytes reactor_address = 2;     // BSV address of person reacting
  string reaction_type = 3;      // "like", "heart", "fire", "star", etc.
  bytes bsv_signature = 4;       // BSV signature proving authenticity
  uint64 timestamp = 5;          // Unix timestamp
  uint32 nerd_reward = 6;        // $NERD tokens earned for this reaction
  bool is_removal = 7;           // true = removing reaction, false = adding
}

// SocialShareMsg handles content sharing
message SocialShareMsg {
  bytes content_address = 1;     // Bitcoin address of content being shared
  bytes sharer_address = 2;      // BSV address of person sharing
  string share_message = 3;      // Optional message with the share
  bytes bsv_signature = 4;       // BSV signature proving authenticity
  uint64 timestamp = 5;          // Unix timestamp
  repeated string platforms = 6; // Platforms shared to (optional)
  uint32 viral_reward = 7;       // $NERD reward for viral sharing
}

// SocialNotificationMsg handles engagement notifications
message SocialNotificationMsg {
  bytes recipient_address = 1;   // BSV address of notification recipient
  bytes sender_address = 2;      // BSV address of notification sender
  string notification_type = 3;  // "follow", "comment", "like", "share", "tip"
  bytes content_address = 4;     // Related content (optional)
  string message = 5;           // Notification message
  uint64 timestamp = 6;         // Unix timestamp
  bool is_read = 7;            // Read status
  uint32 nerd_amount = 8;      // $NERD tokens involved (if any)
}

// SocialDirectMsg handles private messaging
message SocialDirectMsg {
  bytes sender_address = 1;      // BSV address of sender
  bytes recipient_address = 2;   // BSV address of recipient
  bytes encrypted_message = 3;   // Encrypted message content
  bytes bsv_signature = 4;       // BSV signature proving authenticity
  uint64 timestamp = 5;          // Unix timestamp
  bytes message_id = 6;          // Unique message identifier
  bool is_group_message = 7;     // For future group messaging
}

// SocialProfileMsg handles creator profile updates
message SocialProfileMsg {
  bytes creator_address = 1;     // BSV address of creator
  string display_name = 2;       // Public display name
  string bio = 3;               // Creator bio/description
  string avatar_hash = 4;       // IPFS hash of avatar image
  string banner_hash = 5;       // IPFS hash of banner image
  repeated string social_links = 6; // External social media links
  bytes bsv_signature = 7;       // BSV signature proving authenticity
  uint64 timestamp = 8;          // Unix timestamp
  uint32 content_count = 9;      // Number of published content pieces
  uint64 total_earnings = 10;    // Total BSV earnings (satoshis)
  uint32 follower_count = 11;    // Number of followers
}

// SocialStatusMsg handles creator status updates
message SocialStatusMsg {
  bytes creator_address = 1;     // BSV address of creator
  string status_text = 2;        // Status update text
  string status_type = 3;        // "announcement", "live", "working", "available"
  bytes bsv_signature = 4;       // BSV signature proving authenticity
  uint64 timestamp = 5;          // Unix timestamp
  uint64 expires_at = 6;         // When status expires (optional)
  bytes related_content = 7;     // Related content address (optional)
}

// SocialDiscoveryMsg handles content recommendations
message SocialDiscoveryMsg {
  bytes requester_address = 1;   // BSV address requesting recommendations
  repeated bytes content_addresses = 2; // Recommended content addresses
  repeated string recommendation_reasons = 3; // Why each is recommended
  repeated uint32 social_scores = 4; // Social engagement scores
  repeated uint32 quality_scores = 5; // Content quality scores
  uint64 timestamp = 6;          // Unix timestamp
  string discovery_type = 7;     // "trending", "following", "similar", "geographic"
} 